refactor(list): add table + pagination
Add table component + pagination for list feature

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -19,6 +19,14 @@
 		@apply bg-gray-200 outline-none rounded-md;
 	}
 
+	.button-paginate {
+		@apply flex justify-center items-center text-white bg-blue-400 rounded-md w-10 h-10;
+	}
+
+	.button-paginate-disabled {
+		@apply flex justify-center items-center text-black bg-gray-400 rounded-md w-10 h-10;
+	}
+
 	button[type="submit"], .btn-success:hover {
 		@apply text-white bg-blue-400 w-full;
 	}
